Fix navbar whitespace (#455)

--- a/packages/reference/client/scss/60_components/_c-nav.scss
+++ b/packages/reference/client/scss/60_components/_c-nav.scss
@@ -63,9 +63,10 @@
 
     &-list {
       font-size: 1.25em;
-      padding-top: $global-baseline * 10;
+      margin-top: 64px; // height of the logo and search-bar in mobile menu
 
       @include breakpoint(desktop) {
+        margin-top: 0;
         font-size: 1rem;
         display: flex;
         justify-content: space-between;
